# sumo-accident-simulation

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.frontend  LICENSE  Makefile  README.md  accident_manager.py  analyse_batch.py  compare_seattle_real.py  config.seattle.yaml  config.yaml  config_thessaloniki_postmetro_50kph.yaml  docker-compose.yml  download_osm_place.py  experiment_sweep.py  generate_network.py  generate_seattle.py  generate_sioux_falls.py  generate_thessaloniki.py  govgr_downloader.py  govgr_targets.py  merge_mfd_and_update_report.py  metrics.py  mfd_analysis.py  parallel_runner.py  pyproject.toml  requirements.txt  resilience_assessment.py  resilience_report.py  risk_model.py  runner.py  scenario_generator.py  sumo_paths.py  visualise.py  visualise_batch.py  visualise_sweep.py  visualize.py
.github/workflows/: ci.yml
configs/seattle/: default.yaml
configs/templates/: city_default.yaml
configs/thessaloniki/: default.yaml  postmetro_50kph.yaml
data/cities/location/: city_metadata.json
docker/: nginx.conf
docs/: CHANGELOG.md  GUI.md  MACOS_INSTALL.md  PILOT_CITY_TRAFFIC_DATA_FINDINGS.md  README.md  REFERENCE.md  SEATTLE_DATA.md  STRUCTURE.md  SUMO_ACCIDENT_SIMULATOR_REVIEW.md  THESSALONIKI_OPERATOR_GUIDE.md  WORKTREES.md
docs/antifragicity/: AntifragiCity_Documentation_Index.md  Rhoe_MiniGA_Thessaloniki_Working_Guide.md  Rhoe_MiniGA_Thessaloniki_Working_Guide_v0.3.md  SUMA_Codex_Development_Instructions.md  SUMA_Codex_Development_Instructions_v0.2.md  SUMA_Codex_Development_Instructions_v0.3.md  SUMA_MiniGA_Diplomatic_Brief.md  SUMA_Objects_API_Schemas_v0.3.md
docs/antifragicity/context/: AntifragiCity_WP4_Minutes_20260429.docx  AntifragiCity_WP5_03_20260401_MoM.docx  AntifragiCity_WP5_03_20260422_MoM.docx  MiniGA_Thessaloniki_Agenda_LV1.docx  MiniGA_Thessaloniki_Agenda_v5.docx  WP5-Rhoé's Internal Understanding.docx
docs/antifragicity/deliverable_analyses/: Context_MoM_Agenda_WP5_SUMA_Analysis.md  D2.1_Urban_Event_Mapping_WP5_SUMA_Analysis.md  D2.2_Social_Acceptability_Workshops_WP5_SUMA_Analysis.md  D2.3_Equilibrium_Antifragility_WP5_SUMA_Analysis.md  D2.4_Initial_Analysis_WP5_SUMA_Analysis.md  D2.5_Ontology_WP5_SUMA_Analysis.md  D2.6_Requirement_Elicitation_WP5_SUMA_Analysis.md  D2.7_KPI_Framework_WP5_SUMA_Analysis.md  Grant_Agreement_WP5_SUMA_Analysis.md  MiniGA_Working_Pack_WP5_SUMA_Analysis.md  Orchestrator_WP5_SUMA_Extraction_Brief.md
docs/antifragicity/deliverables/: AntifragiCity - D2.4 [INITIAL ANALYSIS].docx
docs/antifragicity/miniGA/: AntifragiCity_DataInventory_Report_v5-the last.docx  AntifragiCity_Data_Inventory_v5-the last.csv  AntifragiCity_KPI_Register (2).docx  AntifragiCity_Ontology_Reference (2).docx  AntifragiCity_Pilot_Briefings (1).docx  AntifragiCity_Requirements_Reference (3).docx  AntifragiCity_TriageMeasures_Reference (2).docx  AntifragiCity_UseCase_Shortlist (2).docx  Input for SUMA from D2.2-D2.4.docx
docs/modules/: README.md  analysis.md  data-integrations.md  generators.md  simulator.md
docs/operations/: README.md  analysis-batch.md  analysis-merge-report.md  analysis-resilience-assessment.md  analysis-seattle-validation.md  analysis-sweep.md  analysis-visualise-sweep.md  analysis.md  data-govgr-download.md  data-govgr-targets.md  data-integrations.md  data-osm.md  generator-riverside.md  generator-seattle.md  generator-sioux-falls.md  generator-thessaloniki.md  generators.md  new-location-workflow.md  simulation-runner.md  simulation.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  cityNetworkMap.tsx  configStudio.ts  main.tsx  odDemandMap.tsx  resultsCharts.tsx  styles.css  trafficFeedMap.tsx  types.ts  ui.tsx
frontend/src/lib/: api.ts
seattle_bundle/: README.md
seattle_network/: README.md
sioux_falls_network/: sioux_falls.edg.xml  sioux_falls.net.xml  sioux_falls.rou.xml  sioux_falls.sumocfg
src/sas/: __init__.py
src/sas/analysis/: analyse_batch.py  mfd_analysis.py  resilience_assessment.py  resilience_report.py  scenario_generator.py
src/sas/app/: __init__.py  config.py
src/sas/core/: accident_manager.py  metrics.py  risk_model.py
src/sas/generators/: __init__.py  generate_network.py  generate_seattle.py  generate_sioux_falls.py  generate_thessaloniki.py
src/sas/gui/: __init__.py  app.py  cities.py  generator_inputs.py  jobs.py  locations.py  results.py  workflows.py
src/sas/integrations/: __init__.py  download_osm_place.py  govgr_downloader.py
src/sas/simulation/: parallel_runner.py  runner.py
src/sas/tools/: __init__.py  compare_seattle_real.py  experiment_sweep.py  merge_mfd_and_update_report.py  visualise_sweep.py
src/suma/: __init__.py
src/suma/analysis/: __init__.py  analyse_batch.py  resilience_assessment.py  resilience_report.py  scenario_generator.py
src/suma/app/: config.py  services.py
src/suma/core/: accident_manager.py  metrics.py  risk_model.py
src/suma/generators/: generate_city.py  generate_network.py  generate_seattle.py  generate_sioux_falls.py  generate_thessaloniki.py
src/suma/gui/: __init__.py  app.py  cities.py  generator_inputs.py  jobs.py  locations.py  results.py  schemas.py  traffic_feeds.py  workflows.py
src/suma/integrations/: download_osm_place.py  govgr_downloader.py  govgr_targets.py
src/suma/simulation/: __init__.py  parallel_runner.py  runner.py
src/suma/tools/: compare_seattle_real.py  experiment_sweep.py  merge_mfd_and_update_report.py  visualise_sweep.py
src/suma/visualization/: __init__.py  visualize.py
tests/: conftest.py  test_accident_manager.py  test_config_validation.py  test_download_osm_place.py  test_generate_city.py  test_govgr_downloader.py  test_gui_cities.py  test_gui_generator_inputs.py  test_gui_results.py  test_gui_traffic_feeds.py  test_live_progress_dashboard.py  test_metrics.py  test_resilience.py  test_risk_model.py  test_sumo_paths.py
thessaloniki_govgr/thessaloniki_congestion/: congestions.csv  congestions.json  congestions.xml  datapackage.json
thessaloniki_govgr/thessaloniki_vehicle_speed/: speed.json
(+15 files in other folders)
