# =============================================================================
# AntifragiCity / SAS — SUMO Accident Simulation
# =============================================================================
# PEP 621 project metadata + tool configuration.
#
# Install:
#   pip install .                  # core dependencies only
#   pip install ".[dev]"           # + testing, linting, type-checking tools
#   pip install -e ".[dev]"        # editable install for development
#
# SUMO / TraCI is NOT a PyPI package — install separately:
#   macOS:   brew install sumo
#   Ubuntu:  sudo apt install sumo sumo-tools
# Then set SUMO_HOME and PYTHONPATH (see README.md).
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antifragicity-sas"
version = "0.1.0"
description = "Probabilistic traffic accident simulator for SUMO with Antifragility Index measurement"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Theocharis Vlachopanagiotis" },
]
keywords = ["sumo", "traffic", "simulation", "accident", "antifragility", "resilience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "PyYAML>=6.0,<7.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.4",
    "types-PyYAML",
]

[tool.setuptools]
py-modules = [
    "runner", "risk_model", "accident_manager", "metrics",
]

[project.scripts]
sas = "runner:main"

[project.urls]
Homepage = "https://github.com/tvlahopanagiotis/sumo-accident-simulation"
Repository = "https://github.com/tvlahopanagiotis/sumo-accident-simulation"


# =============================================================================
# Tool configuration
# =============================================================================

# ── Ruff (linter + formatter) ────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (common gotchas)
]
ignore = [
    "E501",   # line too long — handled by formatter, not linter
    "E741",   # ambiguous variable name (we use l, x, y, etc. intentionally)
]

[tool.ruff.lint.isort]
known-first-party = [
    "runner", "risk_model", "accident_manager", "metrics",
]


# ── Mypy (type checker) ─────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false          # enable gradually as type hints are added
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["traci", "traci.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sumolib", "sumolib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pandas", "pandas.*", "numpy", "numpy.*",
]
ignore_missing_imports = true
follow_imports = "silent"


# ── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires SUMO to be installed (deselect with '-m not integration')",
    "slow: marks tests that take >5 seconds",
]
addopts = "--strict-markers -v"
