# =============================================================================
# AntifragiCity SUMA — Simulator for Urban Mobility Antifragility
# =============================================================================
# PEP 621 project metadata + tool configuration.
#
# Install:
#   pip install .                  # core dependencies only
#   pip install ".[dev]"           # + testing, linting, type-checking tools
#   pip install -e ".[dev]"        # editable install for development
#
# SUMO / TraCI is NOT a PyPI package — install separately:
#   macOS:   brew install sumo
#   Ubuntu:  sudo apt install sumo sumo-tools
# Then set SUMO_HOME and PYTHONPATH (see README.md).
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antifragicity-suma"
version = "0.3.0"
description = "Probabilistic traffic accident simulator for SUMO with Antifragility Index measurement"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Theocharis Vlachopanagiotis" },
    { name = "Konstandinos Grizos" },
]
keywords = ["sumo", "traffic", "simulation", "accident", "antifragility", "resilience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "PyYAML>=6.0,<7.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "requests>=2.28.0,<3.0.0",
    "scipy>=1.10.0,<2.0.0",
    "anthropic>=0.20.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.4",
    "types-PyYAML",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
suma = ["py.typed"]
sas = ["py.typed"]

[project.scripts]
suma = "suma.simulation.runner:main"
suma-assess = "suma.analysis.resilience_assessment:main"
suma-fetch-govgr = "suma.integrations.govgr_downloader:main"
suma-build-govgr-targets = "suma.integrations.govgr_targets:main"
suma-fetch-osm = "suma.integrations.download_osm_place:main"
suma-analyse-batch = "suma.analysis.analyse_batch:main"
suma-generate-city = "suma.generators.generate_city:main"
suma-generate-thessaloniki = "suma.generators.generate_thessaloniki:main"
suma-generate-seattle = "suma.generators.generate_seattle:main"
suma-generate-sioux-falls = "suma.generators.generate_sioux_falls:main"
suma-generate-riverside = "suma.generators.generate_network:main"
suma-compare-seattle-real = "suma.tools.compare_seattle_real:main"
suma-sweep = "suma.tools.experiment_sweep:main"
suma-visualise-sweep = "suma.tools.visualise_sweep:main"
suma-merge-report = "suma.tools.merge_mfd_and_update_report:main"
suma-gui-api = "suma.gui.app:main"
sas = "suma.simulation.runner:main"
sas-assess = "suma.analysis.resilience_assessment:main"
sas-fetch-govgr = "suma.integrations.govgr_downloader:main"
sas-build-govgr-targets = "suma.integrations.govgr_targets:main"
sas-fetch-osm = "suma.integrations.download_osm_place:main"
sas-analyse-batch = "suma.analysis.analyse_batch:main"
sas-generate-city = "suma.generators.generate_city:main"
sas-generate-thessaloniki = "suma.generators.generate_thessaloniki:main"
sas-generate-seattle = "suma.generators.generate_seattle:main"
sas-generate-sioux-falls = "suma.generators.generate_sioux_falls:main"
sas-generate-riverside = "suma.generators.generate_network:main"
sas-compare-seattle-real = "suma.tools.compare_seattle_real:main"
sas-sweep = "suma.tools.experiment_sweep:main"
sas-visualise-sweep = "suma.tools.visualise_sweep:main"
sas-merge-report = "suma.tools.merge_mfd_and_update_report:main"
sas-gui-api = "suma.gui.app:main"

[project.urls]
Homepage = "https://github.com/tvlahopanagiotis/sumo-accident-simulation"
Repository = "https://github.com/tvlahopanagiotis/sumo-accident-simulation"


# =============================================================================
# Tool configuration
# =============================================================================

# ── Ruff (linter + formatter) ────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (common gotchas)
]
ignore = [
    "E501",   # line too long — handled by formatter, not linter
    "E741",   # ambiguous variable name (we use l, x, y, etc. intentionally)
]

[tool.ruff.lint.isort]
known-first-party = ["suma", "sas"]


# ── Mypy (type checker) ─────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false          # enable gradually as type hints are added
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["traci", "traci.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sumolib", "sumolib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pandas", "pandas.*", "seaborn", "seaborn.*", "numpy", "numpy.*",
    "matplotlib", "matplotlib.*", "scipy", "scipy.*",
]
ignore_missing_imports = true
follow_imports = "silent"


# ── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires SUMO to be installed (deselect with '-m not integration')",
    "slow: marks tests that take >5 seconds",
]
addopts = "--strict-markers -v"
